{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 145,
  "lineage": "b9187e2d-a760-56cc-3b62-5f6725a4d6b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "pvt_asso",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-096a31c603b059725",
            "id": "rtb-096a31c603b059725",
            "owner_id": "798183912952",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03082d71133f96fbe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pvt_rt_ass"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_nat_gateway.ravi_nat",
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09bcbd088d860bc94",
            "domain": "vpc",
            "id": "eipalloc-001e621a1ebe87371",
            "network_interface": "eni-028984a3a44440f63",
            "private_dns": "ip-10-10-0-18.us-east-2.compute.internal",
            "private_ip": "10.10.0.18",
            "public_dns": "ec2-3-17-197-170.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.197.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ravi_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b3a460dd50e0752b",
            "owner_id": "798183912952",
            "tags": {
              "Name": "ravi_igw"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ravi_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e621a1ebe87371",
            "id": "nat-03082d71133f96fbe",
            "network_interface_id": "eni-028984a3a44440f63",
            "private_ip": "10.10.0.18",
            "public_ip": "3.17.197.170",
            "subnet_id": "subnet-05f907c144acc4058",
            "tags": {
              "Name": "ravi_nat"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.Public_subnet_a1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02e43c9c8fbe99f39",
            "owner_id": "798183912952",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3a460dd50e0752b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt_public"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_internet_gateway.ravi_igw",
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084fb8350332abae3",
            "route_table_id": "rtb-02e43c9c8fbe99f39",
            "subnet_id": "subnet-05f907c144acc4058"
          },
          "depends_on": [
            "aws_route_table.rt_public",
            "aws_subnet.Public_subnet_a1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_pvt_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6fc6903f5f8341",
            "route_table_id": "rtb-096a31c603b059725",
            "subnet_id": "subnet-091361b2df1bf4b8f"
          },
          "depends_on": [
            "aws_default_route_table.pvt_asso",
            "aws_subnet.pvt_subnet_b2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ravi_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:security-group/sg-05c16885ce6f2d2af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c16885ce6f2d2af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ravi_sg",
            "name_prefix": null,
            "owner_id": "798183912952",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_a1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-05f907c144acc4058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.0/27",
            "id": "subnet-05f907c144acc4058",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "Public_subnet_a1"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_b1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-037e2c18a8d97ccc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.0.64/27",
            "id": "subnet-037e2c18a8d97ccc0",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "Public_subnet_b1"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_c1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-0bc00d698ef0d6431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.0.128/27",
            "id": "subnet-0bc00d698ef0d6431",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "public_subnet_c1"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet_a2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-0c65bb561d4db5452",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.0.32/27",
            "id": "subnet-0c65bb561d4db5452",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "pvt_subnet_a2"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet_b2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-091361b2df1bf4b8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.0.96/27",
            "id": "subnet-091361b2df1bf4b8f",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "pvt_subnet_b2"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_subnet_c2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:subnet/subnet-055dacec2ea834fa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.0.160/27",
            "id": "subnet-055dacec2ea834fa7",
            "map_public_ip_on_launch": false,
            "owner_id": "798183912952",
            "tags": {
              "Name": "pvt_subnet_c2"
            },
            "vpc_id": "vpc-0c80a7a84a42b0206"
          },
          "depends_on": [
            "aws_vpc.ravi_customised"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ravi_customised",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:798183912952:vpc/vpc-0c80a7a84a42b0206",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b970af2aea7a349b",
            "default_route_table_id": "rtb-096a31c603b059725",
            "default_security_group_id": "sg-0850482d9b657270a",
            "dhcp_options_id": "dopt-c0967eab",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c80a7a84a42b0206",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096a31c603b059725",
            "owner_id": "798183912952",
            "tags": {
              "Name": "ravi_customised"
            }
          }
        }
      ]
    }
  ]
}